@@ -1,0 +1,5 @@
+r
+a
+take knife
+kill all
+quit
